--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>Odin recipes</h1>
-    <a href = "recipes/potatosalad.html">Potato salad</a>
+    <ul>
+        <li><a href = "recipes/potatosalad.html">Potato salad</a></li>
+        <li><a href = "recipes/beansrice.html">Black beans and rice</a></li>
+        <li><a href = "recipes/chickenthighs.html">Air fryer chicken thighs</a></li>
+
+    </ul>
 </body>
 </html>
