filled out the rest of the site

--- a/recipes/beansrice.html
+++ b/recipes/beansrice.html
@@ -25,10 +25,10 @@
     </ul>
     <h3>Directions</h3>
     <ol>
-        <li>Gather all ingredients</li>
-        <li>Place potatoes into a large pot and cover with salted water; bring to a boil. Reduce heat to medium-low, cover, and simmer until tender, about 20 minutes. Drain and cut into cubes.</li>
-        <li>Whisk mayonnaise, Parmesan cheese, Dijon mustard, vinegar, cayenne pepper, salt, black pepper, and paprika together in a large bowl.</li>
-        <li>Add potatoes, red onion, and green onions; gently toss to combine.</li>
+        <li>Heat oil in saucepan over medium-high heat. Add onion and garlic; cook and stir until onion has softened, about 4 minutes. Stir in rice to coat; cook and stir for two minutes.</li>
+        <li>Add vegetable broth and bring to a boil. Cover, reduce to a simmer, and cook until liquid is absorbed, about 20 minutes.</li>
+        <li>Stir in beans, cumin, and cayenne; cook until beans are warmed through.</li>
     </ol>
+    <p><a href="/index.html">Home</a></p>
 </body>
 </html>
