--- a/recipes/chickenthighs.html
+++ b/recipes/chickenthighs.html
@@ -3,35 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Potato Salad</title>
+    <title>Chicken thighs</title>
 </head>
 <body>
-    <h1>Potato Salad</h1>
-    <span><a href="https://www.allrecipes.com/recipe/228116/warm-dijon-potato-salad/">Link to recipe here.</a></span><br><br>
-    <img src="https://www.allrecipes.com/thmb/3kzCOteepYi2ONrUavGBOr6lWzY=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/228116-Warm-dijon-Potato-Salad-dmfs-4x3-1399-c0cd5aa4fe034a79b6b71f84323be612.jpg" alt="potato salad" width="200">
+    <h1>Chicken thighs</h1>
+    <span><a href="https://www.allrecipes.com/recipe/272858/air-fryer-chicken-thighs/">Link to recipe here.</a></span><br><br>
+    <img src="https://www.allrecipes.com/thmb/P-qHDj8pqqCZHxSzGAW7VsLW200=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/image-9e5c4aa20ccf4579a9e56eec692171ec.jpg" alt="chicken thigh" width="200">
     <h3>Description</h3>
-        <p>Potato salad is nutritious and delicious.</p>
-        <p>Not only does it taste good, it is good for you.</p>
+        <p>These tasty air fryer chicken thighs have juicy meat and crispy skin!</p>
     <h3>Ingredients</h3>
     <ul>
-        <li>5 red potatoes</li>
-        <li>1/2 cup reduced-fat mayonnaise</li>
-        <li>2 tablespoons grated Parmesan cheese</li>
-        <li>1 1/2 tablespoons Dijon mustard</li>
-        <li>4 teaspoons cider vinegar</li>
-        <li>1/2 teaspoon cayenne pepper</li>
+        <li>4 skin-on, boneless chicken thighs </li>
+        <li>2 teaspoons extra-virgin olive oil</li>
+        <li>1 teaspoon smoked paprika</li>
+        <li>3/4 teaspoon garlic powder</li>
         <li>1/2 teaspoon salt</li>
-        <li>1/4 teaspoon ground black pepper</li>
-        <li>1/4 teaspoon paprika</li>
-        <li>1/2 red onion, thinly sliced</li>
-        <li>2 green onions, chopped</li>
+        <li>1/2 teaspoon ground black pepper</li>
     </ul>
     <h3>Directions</h3>
     <ol>
-        <li>Gather all ingredients</li>
-        <li>Place potatoes into a large pot and cover with salted water; bring to a boil. Reduce heat to medium-low, cover, and simmer until tender, about 20 minutes. Drain and cut into cubes.</li>
-        <li>Whisk mayonnaise, Parmesan cheese, Dijon mustard, vinegar, cayenne pepper, salt, black pepper, and paprika together in a large bowl.</li>
-        <li>Add potatoes, red onion, and green onions; gently toss to combine.</li>
+        <li>Gather all ingredients and preheat an air fryer to 400 degrees F</li>
+        <li>Pat chicken thighs dry with a paper towel and brush skins with olive oil. Place chicken thighs, skin-side down, ini a single layer on a plate.</li>
+        <li>Combine smoked paprika, garlic powder, slat, and pepper in a bowl. Sprinkle 1/2 of the seasoning mixture evenly over thighs. Turn thighs over and evenly sprinkle with remaining seasoning. Arrange thighs, skin-side up, in a single layer in the air fryer basket.</li>
+        <li>Cook in the preheated air fryer until thighs are brown adn the juices run clear, about 18 minutes. An instant-read thermometer inserted in to the center should read at least 165 degrees F.</li>
     </ol>
+    <p><a href="/index.html">Home</a></p>
 </body>
 </html>
