--- a/recipes/potatosalad.html
+++ b/recipes/potatosalad.html
@@ -33,5 +33,6 @@
         <li>Whisk mayonnaise, Parmesan cheese, Dijon mustard, vinegar, cayenne pepper, salt, black pepper, and paprika together in a large bowl.</li>
         <li>Add potatoes, red onion, and green onions; gently toss to combine.</li>
     </ol>
+    <p><a href="/index.html">Home</a></p>
 </body>
 </html>
