Made everything pretty
Created stylesheet and applied it to every page.
Formatting can still be worked on but it's a start.

--- a/recipes/beansrice.html
+++ b/recipes/beansrice.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Black beans and rice</title>
+    <link rel="stylesheet" href="/styles.css">
+
 </head>
 <body>
+    <div id="all">
     <h1>Black beans and rice</h1>
     <span><a href="https://www.allrecipes.com/recipe/15559/black-beans-and-rice/">Link to recipe here.</a></span><br><br>
     <img src="https://www.allrecipes.com/thmb/u4Tlz5RDlY5uzGIhS6aYRV2TL6M=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Black-Beans-and-Rice-by-House-of-Aqua-2119665_original-4e87fb50007047deb0756d83d15591b7.jpg" alt="beans and rice" width="200">
@@ -30,5 +33,6 @@
         <li>Stir in beans, cumin, and cayenne; cook until beans are warmed through.</li>
     </ol>
     <p><a href="/index.html">Home</a></p>
+</div>
 </body>
 </html>
