--- a/recipes/chickenthighs.html
+++ b/recipes/chickenthighs.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chicken thighs</title>
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
+    <div id="all">
     <h1>Chicken thighs</h1>
     <span><a href="https://www.allrecipes.com/recipe/272858/air-fryer-chicken-thighs/">Link to recipe here.</a></span><br><br>
     <img src="https://www.allrecipes.com/thmb/P-qHDj8pqqCZHxSzGAW7VsLW200=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/image-9e5c4aa20ccf4579a9e56eec692171ec.jpg" alt="chicken thigh" width="200">
@@ -28,5 +30,6 @@
         <li>Cook in the preheated air fryer until thighs are brown adn the juices run clear, about 18 minutes. An instant-read thermometer inserted in to the center should read at least 165 degrees F.</li>
     </ol>
     <p><a href="/index.html">Home</a></p>
+</div>
 </body>
 </html>
