--- a/recipes/potatosalad.html
+++ b/recipes/potatosalad.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Potato Salad</title>
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
+    <div id = 'all'>
     <h1>Potato Salad</h1>
     <span><a href="https://www.allrecipes.com/recipe/228116/warm-dijon-potato-salad/">Link to recipe here.</a></span><br><br>
     <img src="https://www.allrecipes.com/thmb/3kzCOteepYi2ONrUavGBOr6lWzY=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/228116-Warm-dijon-Potato-Salad-dmfs-4x3-1399-c0cd5aa4fe034a79b6b71f84323be612.jpg" alt="potato salad" width="200">
@@ -34,5 +36,6 @@
         <li>Add potatoes, red onion, and green onions; gently toss to combine.</li>
     </ol>
     <p><a href="/index.html">Home</a></p>
+    </div>
 </body>
 </html>
